--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body {
   align-items: center;
   justify-content: center;
   height: 100vh;
-  background-color: coral;
+  background-color: salmon;
   font-family: Arial, Helvetica, sans-serif;
 }
 
